; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/hisilicon/hns/extr_hns_dsaf_main.c_hns_dsaf_tbl_stat_en.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/hisilicon/hns/extr_hns_dsaf_main.c_hns_dsaf_tbl_stat_en.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dsaf_device = type { i32 }

@DSAF_TBL_DFX_CTRL_0_REG = common dso_local global i32 0, align 4
@DSAF_TBL_DFX_LINE_LKUP_NUM_EN_S = common dso_local global i32 0, align 4
@DSAF_TBL_DFX_UC_LKUP_NUM_EN_S = common dso_local global i32 0, align 4
@DSAF_TBL_DFX_MC_LKUP_NUM_EN_S = common dso_local global i32 0, align 4
@DSAF_TBL_DFX_BC_LKUP_NUM_EN_S = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dsaf_device*)* @hns_dsaf_tbl_stat_en to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hns_dsaf_tbl_stat_en(%struct.dsaf_device* %0) #0 {
  %2 = alloca %struct.dsaf_device*, align 8
  %3 = alloca i32, align 4
  store %struct.dsaf_device* %0, %struct.dsaf_device** %2, align 8
  %4 = load %struct.dsaf_device*, %struct.dsaf_device** %2, align 8
  %5 = load i32, i32* @DSAF_TBL_DFX_CTRL_0_REG, align 4
  %6 = call i32 @dsaf_read_dev(%struct.dsaf_device* %4, i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @DSAF_TBL_DFX_LINE_LKUP_NUM_EN_S, align 4
  %9 = call i32 @dsaf_set_bit(i32 %7, i32 %8, i32 1)
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @DSAF_TBL_DFX_UC_LKUP_NUM_EN_S, align 4
  %12 = call i32 @dsaf_set_bit(i32 %10, i32 %11, i32 1)
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @DSAF_TBL_DFX_MC_LKUP_NUM_EN_S, align 4
  %15 = call i32 @dsaf_set_bit(i32 %13, i32 %14, i32 1)
  %16 = load i32, i32* %3, align 4
  %17 = load i32, i32* @DSAF_TBL_DFX_BC_LKUP_NUM_EN_S, align 4
  %18 = call i32 @dsaf_set_bit(i32 %16, i32 %17, i32 1)
  %19 = load %struct.dsaf_device*, %struct.dsaf_device** %2, align 8
  %20 = load i32, i32* @DSAF_TBL_DFX_CTRL_0_REG, align 4
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @dsaf_write_dev(%struct.dsaf_device* %19, i32 %20, i32 %21)
  ret void
}

declare dso_local i32 @dsaf_read_dev(%struct.dsaf_device*, i32) #1

declare dso_local i32 @dsaf_set_bit(i32, i32, i32) #1

declare dso_local i32 @dsaf_write_dev(%struct.dsaf_device*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
